# OPyN

./: README.md  __init__.py  install.sh  old_opyn.pyx  opyn.c  opyn.html  opyn.pyx  prototype.py  pyproject.toml  setup.py
OPyN/: opyn.c  opyn.pyx
OPyN.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tutorial/: data.npz
tutorial/.ipynb_checkpoints/: tutorial-checkpoint.ipynb
